<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <ImageView
    android:id="@+id/img"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginTop="25dp"
    android:src="@drawable/myimg"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <EditText
    android:id="@+id/username"
    android:layout_width="350dp"
    android:layout_height="40dp"
    android:layout_marginTop="160dp"
    android:ems="20"
    android:hint="@string/user_name_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <EditText
    android:id="@+id/phone"
    android:layout_width="350dp"
    android:layout_height="40dp"
    android:layout_marginTop="220dp"
    android:ems="10"
    android:hint="@string/phone_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <EditText
    android:id="@+id/email"
    android:layout_width="350dp"
    android:layout_height="40dp"
    android:layout_marginTop="280dp"
    android:ems="30"
    android:hint="@string/email_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <EditText
    android:id="@+id/address"
    android:layout_width="350dp"
    android:layout_height="40dp"
    android:layout_marginTop="340dp"
    android:ems="30"
    android:hint="@string/address_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <Button
    android:id="@+id/buttonBirthday"
    android:layout_width="150dp"
    android:layout_height="40dp"
    android:onClick="showDatePickerDialog"
    android:text="Ngày sinh"
    tools:layout_editor_absoluteX="30dp"
    tools:layout_editor_absoluteY="400dp"
    tools:ignore="MissingConstraints"/>
  <RadioGroup
    android:id="@+id/radioGroupGender"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="MissingConstraints">

  </RadioGroup>

  <Button
    android:id="@+id/buttonBirthday"
    android:layout_width="170dp"
    android:layout_height="40dp"
    android:layout_marginTop="16dp"
    android:onClick="showDatePickerDialog"
    android:text="Ngày sinh"
    tools:layout_editor_absoluteX="30dp"
    tools:layout_editor_absoluteY="400dp"
    tools:ignore="MissingConstraints"/>
  <RadioButton
    android:id="@+id/radioButtonMale"
    android:layout_width="80dp"
    android:layout_height="40dp"
    android:text="Nam"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="212dp"
    tools:layout_editor_absoluteY="400dp"/>
  <RadioButton
    android:id="@+id/radioButtonFemale"
    android:layout_width="80dp"
    android:layout_height="40dp"
    android:text="Nữ"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="301dp"
    tools:layout_editor_absoluteY="400dp"/>
  <EditText
    android:id="@+id/address"
    android:layout_width="350dp"
    android:layout_height="40dp"
    android:layout_marginTop="460dp"
    android:ems="30"
    android:hint="@string/group_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:layout_width="350dp"
    android:layout_height="40dp"
    android:layout_marginTop="520dp"
    android:hint="@string/course"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <CheckBox
    android:id="@+id/checkBoxCourse1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Khóa học 1"
    tools:layout_editor_absoluteX="30dp"
    tools:layout_editor_absoluteY="560dp"
    tools:ignore="MissingConstraints"/>

  <CheckBox
    android:id="@+id/checkBoxCourse2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Khóa học 2"
    tools:layout_editor_absoluteX="30dp"
    tools:layout_editor_absoluteY="590dp"
    tools:ignore="MissingConstraints"/>

  <CheckBox
    android:id="@+id/checkBoxCourse3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Khóa học 3"
    tools:layout_editor_absoluteX="30dp"
    tools:layout_editor_absoluteY="620dp"
    tools:ignore="MissingConstraints"/>

  <Button
    android:id="@+id/submit_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Gửi"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.493"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.954"/>

</android.support.constraint.ConstraintLayout>